tests/baselines/reference/parserUnterminatedGeneric2.errors.txt
==== tests/cases/compiler/parserUnterminatedGeneric2.ts (15 errors) ====
    declare module ng {
        interfaceICompiledExpression {
                                     ~
!!! parserUnterminatedGeneric2.ts(2,34): error TS1005: ';' expected.
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! parserUnterminatedGeneric2.ts(2,5): error TS2095: Cannot find name 'interfaceICompiledExpression'.
            (context: any, locals?: any): any;
                                             ~
!!! parserUnterminatedGeneric2.ts(3,42): error TS1005: '=>' expected.
            assign(context: any, value: any): any;
                          ~
!!! parserUnterminatedGeneric2.ts(4,23): error TS1005: ',' expected.
                                      ~
!!! parserUnterminatedGeneric2.ts(4,35): error TS1005: ',' expected.
                                            ~
!!! parserUnterminatedGeneric2.ts(4,41): error TS1005: ';' expected.
            ~~~~~~
!!! parserUnterminatedGeneric2.ts(4,9): error TS2095: Cannot find name 'assign'.
                            ~~~
!!! parserUnterminatedGeneric2.ts(4,25): error TS2095: Cannot find name 'any'.
                                 ~~~~~
!!! parserUnterminatedGeneric2.ts(4,30): error TS2095: Cannot find name 'value'.
                                        ~~~
!!! parserUnterminatedGeneric2.ts(4,37): error TS2095: Cannot find name 'any'.
                                              ~~~
!!! parserUnterminatedGeneric2.ts(4,43): error TS2095: Cannot find name 'any'.
        }
    
        interface IQService {
        ~~~~~~~~~
!!! parserUnterminatedGeneric2.ts(7,5): error TS1008: Unexpected token; 'statement' expected.
            all(promises: IPromise < any > []): IPromise<
                                                         
!!! parserUnterminatedGeneric2.ts(8,54): error TS1005: '>' expected.
                          ~~~~~~~~
!!! parserUnterminatedGeneric2.ts(8,23): error TS2095: Cannot find name 'IPromise'.
                                                ~~~~~~~~
!!! parserUnterminatedGeneric2.ts(8,45): error TS2095: Cannot find name 'IPromise'.